# gogma-artian-weapons-reroll-automation

./: .gitignore  README.md  main.py  pyproject.toml
devtools/: build_dist.py
devtools/skill_reroller/: convert_coords.py  materials_analyzer.py  materials_area_verifier.py  skills_area_verifier.py  skills_layout_detector.py  skills_layout_detector_debug.py  weapon_info_verifier.py  window_lister.py
docs/agents/: reroll_mechanism_spec.md
scripts/: run_skill_reroller.bat
src/skill_reroller/: __init__.py  config.py  config.toml  game_logic.py  gui.py  input_manager.py  ocr_handler.py  screen_reader.py  table_manager.py  utils.py
